fixed spacing of navbar from logo

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ a {
         opacity: 1;
         background-color: transparent;
         height: auto;
-        width: 80%;
+        width: 90%;
         display: flex;
         padding: 0;
 
